# CLUSTR

./: .claudeignore  .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md  system.conf
bench/fft/: bench_fft_3d.cpp
bench/include/bench/: env.h  json_writer.h  runner.h  stats.h  timer.h
bench/mpi/: bench_collectives.cpp  bench_p2p_bandwidth.cpp  bench_p2p_pingpong.cpp
bench/openmpi/: bench_ompi_bcast.cpp  bench_ompi_pingpong.cpp
bench/transfer/: bench_file_transfer.cpp
client/: client.cpp
docs/: BENCHMARKS.md  FAST-FFT.md  IMPLEMENTATION.md  MD-FFT.md  MPI.md  OPTIMIZATION_PLAN.md  PHASE8.md  PHASE9_OPTIMIZATIONS.md  PHASE9_SUMMARY.md  PYTHON_BRIDGE.md
docs/archive/: PHASE8.md  UNIFICATION_ANALYSIS.md
include/: capability_detector.h  clustr_mpi.h  config.h  dist_array.h  file_transfer.h  process_monitor.h  protocol.h  remote_exec.h  scheduler.h  scheduler_strategy.h  system_conf.h  tcp_server.h  tui.h  worker_registry.h
include/clustr/: alltoallw.h  bench_hook.h  cart.hpp  parallel_fft_2d.h  parallel_fft_3d.h  recv_central.hpp  recv_inline.hpp  redistribute.h  subarray.h  transport_common.hpp  transport_pack_unpack.hpp  transport_zero_copy.hpp
jobs/: alltoallw_test.cpp  cart_sub_test.cpp  example_python_job.py  fft_2d_test.cpp  fft_3d_test.cpp  fft_3d_test_auto.cpp  fft_serial_test.cpp  matrix_multiply.cpp  mpi_hello.cpp  mpi_reduce.cpp  mpi_scatter_gather.cpp  python_scatter_gather.cpp  redistribute_test.cpp  subarray_coalesce_test.cpp  subarray_send_test.cpp
scripts/: bench_all.sh  deploy.sh  plot_bench.py  setup_worker.sh
server/: main.cpp
src/: capability_detector.cpp  file_transfer.cpp  process_monitor.cpp  protocol.cpp  remote_exec.cpp  scheduler.cpp  tcp_server.cpp
src/tui/: tui_dialogs.cpp  tui_draw.cpp  tui_impl.h  tui_input.cpp  tui_state.cpp
tests/: run_cart_sub_local.sh  run_fft_2d_local.sh  run_fft_3d_local.sh  run_python_bridge.sh  run_redistribute_local.sh  test_protocol.cpp
